--- a/dataConsulta.html
+++ b/dataConsulta.html
@@ -15,74 +15,69 @@
     </header>
     <div class="area_container">
         <h1>Data da consulta</h1>
-        <h2>Selecione a melhor data abaixo.</h2>
-
-        <div class="informacoes_data">
-            <p>Data</p>
-            <p>Horários Disponíveis</p>
-        </div>
-
+        <h2>Selecione a melhor data para sua consulta abaixo.</h2>
         <div class="data_horario">
         <div class="data">
-            <input id="data" type="date" min="2023-01-10" max="2023-12-15">
+            <h2>Data</h2>
+            <input id="data" type="date">
         </div>
-        <!-- Horários da manhã -->
-            <div class="horario_matutino">
-                <p>horários matutino</p>
-            <div class="box_radio">
-                <input type="radio" id="horario_07" name="check">
-                <label for="checkbox-circle1">07:00</label>
-              </div>
-            <div class="box_radio">
-                <input type="radio" id="horario_08" name="check">
-                <label for="checkbox-circle1">08:00</label>
-              </div>
-            <div class="box_radio">
-                <input type="radio" id="horario_09" name="check">
-                <label for="checkbox-circle1">09:00</label>
-              </div>
-            <div class="box_radio">
-                <input type="radio" id="horario_10" name="check">
-                <label for="checkbox-circle1">10:00</label>
-              </div>
-            <div class="box_radio">
-                <input type="radio" id="horario_11" name="check">
-                <label for="checkbox-circle1">11:00</label>
-              </div><br>
-            </div>
-            <!-- Horários da tarde -->
-            <div class="horario_vesperino">
-                <p>horários vesperino</p>
-            <div class="box_radio">
-                <input type="radio" id="horario_13" name="check">
-                <label for="checkbox-circle1">13:00</label>
-              </div>
-            <div class="box_radio">
-                <input type="radio" id="horario_14" name="check">
-                <label for="checkbox-circle1">14:00</label>
-              </div>
-            <div class="box_radio">
-                <input type="radio" id="horario_15" name="check">
-                <label for="checkbox-circle1">15:00</label>
-              </div>
-            <div class="box_radio">
-                <input type="radio" id="horario_16" name="check">
-                <label for="checkbox-circle1">16:00</label>
-              </div>
-            <div class="box_radio">
-                <input type="radio" id="horario_17" name="check">
-                <label for="checkbox-circle1">17:00</label>
-              </div>
-            <div class="box_radio">
-                <input type="radio" id="horario_18" name="check">
-                <label for="checkbox-circle1">18:00</label>
-              </div>
-            </div>
+
+        <div class="horario">
+            <h2>Horários disponíveis</h2>
+            <div class="Periodo_geral">
+            <div class="periodo_matutino">
+                <p>Periodo matutino</p>
+                <div class="input_radio">
+            <input id="horario_07" type="radio" name="horarios_disponiveis">
+            <label for="horario_07">07:00</label>
+        </div>
+        <div class="input_radio">
+            <input id="horario_08" type="radio" name="horarios_disponiveis">
+            <label for="horario_08">08:00</label>
+        </div>
+            <div class="input_radio">
+            <input id="horario_09" type="radio" name="horarios_disponiveis">
+            <label for="horario_09">09:00</label>
+        </div>
+            <div class="input_radio">
+            <input id="horario_10" type="radio" name="horarios_disponiveis">
+            <label for="">10:00</label>
+        </div>
+            <div class="input_radio">
+            <input id="horario_11" type="radio" name="horarios_disponiveis">
+            <label for="">11:00</label>
+        </div>
+        </div>
+        <div class="periodo_vesperino">
+            <p>Periodo vesperino</p>
+            <div class="input_radio">
+            <input id="horario_13" type="radio" name="horarios_disponiveis">
+            <label for="">13:00</label>
+        </div>
+            <div class="input_radio">
+            <input id="horario_14" type="radio" name="horarios_disponiveis">
+            <label for="">14:00</label>
+        </div>
+            <div class="input_radio">
+            <input id="horario_15" type="radio" name="horarios_disponiveis">
+            <label for="">15:00</label>
+        </div>
+            <div class="input_radio">
+            <input id="horario_16" type="radio" name="horarios_disponiveis">
+            <label for="">16:00</label>
+        </div>
+            <div class="input_radio">
+            <input id="horario_17" type="radio" name="horarios_disponiveis">
+            <label for="">17:00</label>
+        </div>
     </div>
-    <div class="butoes">
+    </div>
+   
+    <div class="botao">
         <button class="btn_confirmar">Confirmar</button>
-        <button id="btn_sair">Voltar</button>
     </div>
+</div>
+</div>
     </div>
 </body>
 </html>
