Atualizando as telas

--- a/gerais.html
+++ b/gerais.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerais</title>
-    <link rel="stylesheet" href="styles/gerais.css">
+    <link rel="stylesheet" href="CSS/gerais.css">
 
 </head>
 <body>
   
     <header>
             <div class="logo" id="logo">
-                <img src="images/Odonto-removebg-preview (2).png" class="img_logo" alt="Logo Odonto Family">
+                <img src="img/Odonto-removebg-preview (2).png" class="img_logo" alt="Logo Odonto Family">
             </div>
     </header>
 
@@ -20,21 +20,21 @@
 
         <div class="qdd_1">
             <div class="agendar_consulta">
-               <a href=""><img src="images/livro.png" class="img_usuario" alt="Agendar consulta"></a>
+               <a href=""><img src="img/livro.png" class="img_usuario" alt="Agendar consulta"></a>
             </div>
                 <h2>AGENDAR CONSULTA</h2>
         </div>
 
                 <div class="qdd_2">
                     <div class="atualizar_cadastro">
-                        <a href=""><img src="images/settings.png" class="img_usuario" alt="atualizar cadastro"></a>
+                        <a href=""><img src="img/settings.png" class="img_usuario" alt="atualizar cadastro"></a>
                     </div>
                     <h2>ATUALIZAR CADASTRO</h2>
                 </div>
 
                     <div class="qdd_3">
                         <div class="agendamentos">
-                            <a href=""><img src="images/agenda.png" class="img_usuario" alt="agendamentos"></a>
+                            <a href=""><img src="img/agenda.png" class="img_usuario" alt="agendamentos"></a>
                         </div>
                         <H2>AGENDAMENTOS</H2>
                     </div>
