--- a/login.html
+++ b/login.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="styles/login.css">
+    <link rel="stylesheet" href="CSS/login.css">
 
 </head>
 <body>
   
     <header>
             <div class="logo" id="logo">
-                <img src="images/Odonto-removebg-preview (2).png" class="img_logo" alt="Logo Odonto Family">
+                <img src="img/Odonto-removebg-preview (2).png" class="img_logo" alt="Logo Odonto Family">
             </div>
     </header>
 
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="info_cliente">
             <div class="title_login">
-                <img src="images/usuario.png" class="img_usuario" alt="Usuario">
+                <img src="img/usuario.png" class="img_usuario" alt="Usuario">
                 <h2> LOGIN CLIENTE</h2>
             </div>
 
@@ -30,7 +30,7 @@
                 </div>
         
                     <div class="entrar">
-                        <input type="submit" value="ENTRAR" class="btn_entrar">
+                        <input onclick="" type="submit" value="ENTRAR" class="btn_entrar">
                     </div>
         </div>
     </div>   
