--- a/marcar_periodo.html
+++ b/marcar_periodo.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marcar Período</title>
-    <link rel="stylesheet" href="styles/marcar_periodo.css">
+    <link rel="stylesheet" href="CSS/marcar_periodo.css">
 
 </head>
 <body>
   
     <header>
             <div class="logo" id="logo">
-                <img src="images/Odonto-removebg-preview (2).png" class="img_logo" alt="Logo Odonto Family">
+                <img src="img/Odonto-removebg-preview (2).png" class="img_logo" alt="Logo Odonto Family">
             </div>
     </header>
 
