--- a/opcoes_login.html
+++ b/opcoes_login.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opções de Login</title>
-    <link rel="stylesheet" href="styles/opcoes_login.css">
+    <link rel="stylesheet" href="CSS/opcoes_login.css">
 
 </head>
 <body>
   
     <header>
             <div class="logo" id="logo">
-                <img src="images/Odonto-removebg-preview (2).png" class="img_logo" alt="Logo Odonto Family">
+                <img src="img/Odonto-removebg-preview (2).png" class="img_logo" alt="Logo Odonto Family">
             </div>
     </header>
 
@@ -20,21 +20,21 @@
 
         <div class="qdd_1">
             <div class="new_user">
-               <a href=""><img src="images/adicionar_usuario.png" class="img_usuario" alt="Adicionar Usuario"></a>
+               <a href=""><img src="img/adicionar_usuario.png" class="img_usuario" alt="Adicionar Usuario"></a>
             </div>
                 <h2>NOVO USUARIO</h2>
         </div>
 
                 <div class="qdd_2">
                     <div class="login_cliente">
-                        <a href=""><img src="images/usuario.png" class="img_usuario" alt="Usuario"></a>
+                        <a href=""><img src="img/usuario.png" class="img_usuario" alt="Usuario"></a>
                     </div>
                     <h2>LOGIN CLIENTE</h2>
                 </div>
 
                     <div class="qdd_3">
                         <div class="planos">
-                            <a href=""><img src="images/dente.png" class="img_usuario" alt="Planos"></a>
+                            <a href=""><img src="img/dente.png" class="img_usuario" alt="Planos"></a>
                         </div>
                         <H2>PLANOS</H2>
                     </div>
