--- a/especialidades.html
+++ b/especialidades.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Especialidades</title>
-    <link rel="stylesheet" href="styles/especialidades.css">
+    <link rel="stylesheet" href="CSS/especialidades.css">
 
 </head>
 <body>
   
     <header>
             <div class="logo" id="logo">
-                <img src="images/Odonto-removebg-preview (2).png" class="img_logo" alt="Logo Odonto Family">
+                <img src="img/Odonto-removebg-preview (2).png" class="img_logo" alt="Logo Odonto Family">
             </div>
     </header>
 
@@ -20,28 +20,28 @@
 
         <div class="qdd_1">
             <div class="ortodontia">
-               <a href=""><img src="images/ortodontia.png" class="img_usuario" alt="ORTODONTIA"></a>
+               <a href=""><img src="img/ortodontia.png" class="img_usuario" alt="ORTODONTIA"></a>
             </div>
                 <h2>ORTODONTIA</h2>
         </div>
 
                 <div class="qdd_2">
                     <div class="clinico_geral">
-                        <a href=""><img src="images/cli_geral.png" class="img_usuario" alt="CLINICO GERAL"></a>
+                        <a href=""><img src="img/cli_geral.png" class="img_usuario" alt="CLINICO GERAL"></a>
                     </div>
                     <h2>CLÍNICO GERAL</h2>
                 </div>
 
                     <div class="qdd_3">
                         <div class="estetica">
-                            <a href=""><img src="images/estetica.png" class="img_usuario" alt="FINALIDADE ESTETICA"></a>
+                            <a href=""><img src="img/estetica.png" class="img_usuario" alt="FINALIDADE ESTETICA"></a>
                         </div>
                         <H2>ESTÉTICA</H2>
                     </div>
 
                         <div class="qdd_4">
                             <div class="odonto_pediatra">
-                                <a href=""><img src="images/dent_pediatra.png" class="img_usuario" alt="PEDIATRIA"></a>
+                                <a href=""><img src="img/dent_pediatra.png" class="img_usuario" alt="PEDIATRIA"></a>
                             </div>
                             <H2>ODONTOPEDIATRIA</H2>
                         </div>                    
